--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ nav .fa {
     }
 
     .nav-links {
-        position: absolute;
+        position: fixed;
         background: #0082e6;
         height: 100vh;
         width: 200px;
@@ -168,7 +168,7 @@ p {
 
 .course-col {
     flex-basis: 31%;
-    background: #fff3f3;
+    background: #badcfb;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
@@ -244,7 +244,7 @@ h3 {
 }
 
 .layer:hover h3 {
-    bottom: 42%;
+    bottom: 47%;
     opacity: 1;
 }
 
@@ -405,7 +405,7 @@ h3 {
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
-    background: #fff3f3;
+    background: #badcfb;
     padding: 25px;
     cursor: pointer;
     display: flex;
@@ -476,12 +476,104 @@ h3 {
 }
 
 .icons .fa {
-    color: #f44336;
+    color: #0082e6;
     margin: 0 13px;
     cursor: pointer;
     padding: 18px 0;
 }
 
 .fa-heart-o {
-    color: #f44336;
+    color: #0082e6;
+}
+
+/*---------- About Us Page ----------*/
+.sub-header {
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(img/wallpaper.jpg);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
+
+.sub-header h1 {
+    margin-top: 100px;
+}
+
+.about-us {
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+}
+
+.about-col {
+    flex-basis: 48%;
+    padding: 30px 2px;
+}
+
+@media(max-width: 700px){
+    .sub-header h1 {
+        font-size: 20px;
+    }
+}
+
+/*---------- Contact Page ----------*/
+.location {
+    width: 80%;
+    margin: auto;
+    padding: 80px 0;
+}
+
+.location iframe {
+    width: 100%;
+}
+
+.contact-us {
+    width: 80%;
+    margin: auto;
+}
+
+.contact-col {
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div .fa {
+    font-size: 28px;
+    color: #0082e6;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p {
+    padding: 0;
+}
+
+.contact-col div h5 {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea {
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+.contact-col button {
+    color: #555;
+    border-color: #555;
 }
